ambient image gif

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
               
                <div class="prototype-option">
         <a href="./sketches/ambientimage/index.html">
-          <img src="./sketches/ambient/assets/ambient.png"
-            onmouseover="hover(this, 'https://raw.githubusercontent.com/sl194/t8_poseestimation/main/sketches/ambientimage/assets/ambientimage.png')"
+          <img src="./sketches/ambientimage/assets/ambientimage.png"
+            onmouseover="hover(this, 'https://raw.githubusercontent.com/sl194/t8_poseestimation/main/sketches/ambientimage/assets/ambientimage.gif')"
             onmouseout="unhover(this, 'https://raw.githubusercontent.com/sl194/t8_poseestimation/main/sketches/ambientimage/assets/ambientimage.png')"
             class="prototype-thumbnail" alt="" />
         </a>
